--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -48,8 +48,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: neighbourhood.azurecr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
       # 7️⃣ Build and Push Docker Image
       - name: Build and push Docker image
